objects/ASI_KOR_Venue_Listed_Menu_Product__c.object
<CustomObject>
    <description>This object is used for to capture which products are listed on the Venue&apos;s Menu</description>
    <fields>
        <fullName>ASI_CRM_KR_HeaderID_Upload__c</fullName>
        <label>HeaderID(Upload)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Listed_Menu_Product_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listed Menu Product Header</label>
        <referenceTo>ASI_CRM_KR_Listed_Menu_Price__c</referenceTo>
        <relationshipLabel>Listed Menu Products</relationshipLabel>
        <relationshipName>Listed_Menu_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CreatedDateKSTAdj__c</fullName>
        <formula>CreatedDate + 0.375</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateKSTAdj</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_KOR_Item_Group__c.ASI_CRM_KR_Priority_Item__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Listed Menu Products</relationshipLabel>
        <relationshipName>Listed_Menu_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Name__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Item_Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_LMP_Report_Created_Month__c</fullName>
        <formula>CASE(MONTH(ASI_KOR_CreatedDateKSTAdj__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMP Report - Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_LMP_Report_Created_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_KOR_CreatedDateKSTAdj__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMP Report - Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_ListedMenuProduct_to_Venue_Link__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Listed Menu Products</relationshipLabel>
        <relationshipName>Listed_Menu_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Listed_Price__c</fullName>
        <label>Listed Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Listed Menu Product</label>
    <nameField>
        <displayFormat>LMP-{00000000}</displayFormat>
        <label>Listed Menu Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listed Menu Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>